{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 58,
  "lineage": "1881036e-4dca-1e0a-130b-3b590d190059",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0ead655a257d02b09",
            "domain": "vpc",
            "id": "eipalloc-0269806898047ae27",
            "instance": "i-05fd867bcb6a04171",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c5594d1fb48cea0",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-229-28-234.compute-1.amazonaws.com",
            "public_ip": "34.229.28.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.sample",
            "aws_security_group.allow_web",
            "aws_subnet.sample",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a51fa27710816e",
            "arn": "arn:aws:ec2:us-east-1:618558285473:instance/i-05fd867bcb6a04171",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fd867bcb6a04171",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hawey-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03c5594d1fb48cea0"
              }
            ],
            "primary_network_interface_id": "eni-03c5594d1fb48cea0",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "34.229.28.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008e2718d7debb2e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c424a8752897dde2",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d948cae177d0c154"
            ]
          },
          "dependencies": [
            "aws_key_pair.hawey-key",
            "aws_network_interface.sample",
            "aws_security_group.allow_web",
            "aws_subnet.sample",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618558285473:internet-gateway/igw-002cb63076e64fa81",
            "id": "igw-002cb63076e64fa81",
            "owner_id": "618558285473",
            "tags": {
              "Name": "produ"
            },
            "vpc_id": "vpc-05fcd97c660413247"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0b0db456c7aa21439",
                "device_index": 0,
                "instance": "i-05fd867bcb6a04171"
              }
            ],
            "id": "eni-03c5594d1fb48cea0",
            "ipv6_address_count": 0,
            "mac_address": "0e:4a:11:f5:d8:e7",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d948cae177d0c154"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c424a8752897dde2"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.sample",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "produ-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038d21fb7a5bf37ca",
            "owner_id": "618558285473",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002cb63076e64fa81",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002cb63076e64fa81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "produ"
            },
            "vpc_id": "vpc-05fcd97c660413247"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d91e810751897b94",
            "route_table_id": "rtb-038d21fb7a5bf37ca",
            "subnet_id": "subnet-0c424a8752897dde2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.produ-route",
            "aws_subnet.sample",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618558285473:security-group/sg-0d948cae177d0c154",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d948cae177d0c154",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web-traffic",
            "name_prefix": "",
            "owner_id": "618558285473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fcd97c660413247"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618558285473:subnet/subnet-0c424a8752897dde2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c424a8752897dde2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618558285473",
            "tags": {
              "Name": "sample"
            },
            "vpc_id": "vpc-05fcd97c660413247"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618558285473:vpc/vpc-05fcd97c660413247",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05570d72548f69147",
            "default_route_table_id": "rtb-0bc85c2da33e8637a",
            "default_security_group_id": "sg-069ccd9d738bc3dd0",
            "dhcp_options_id": "dopt-b12c80cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05fcd97c660413247",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc85c2da33e8637a",
            "owner_id": "618558285473",
            "tags": {
              "Name": "produ"
            }
          }
        }
      ]
    }
  ]
}